# AdvancedLED

./: AdvancedLED4.cpp  AdvancedLED4.h  AdvancedTest5.ino  Animations.cpp  Animations.h  AudioSampling.cpp  AudioSampling.h  LEDHandler.cpp  LEDHandler.h  Layers.cpp  Layers.h  Loader.cpp  Loader.h  Utilities.cpp  Utilities.h
AdvancedLED5/: AdvancedLED5.cpp  AdvancedLED5.h  Animations.cpp  Animations.h  AudioData.cpp  AudioData.h  AudioSampling.cpp  AudioSampling.h  CMakeLists.txt  LEDHandler.cpp  LEDHandler.h  Loader.cpp  Loader.h  Utilities.cpp  Utilities.h
ListViewTest/: settings.gradle
ListViewTest/app/: build.gradle
ListViewTest/app/src/main/: AndroidManifest.xml
ListViewTest/app/src/main/java/com/example/listviewtest/: MainActivity.java  PresetActivity.java  PresetClass.java  SingleAvailableList.java  SingleLoadedList.java  addAnimationActivity.java  animationActivity.java  animationInfo.java  blueActivity.java  blueToothAddress.java  editAnimationActivity.java
ListViewTest/app/src/main/res/layout/: activity_add_animation.xml  activity_animation.xml  activity_blue.xml  activity_edit_animation.xml  activity_main.xml  activity_preset.xml
ListViewTest/app/src/main/res/values/: strings.xml
ListViewTest/gradle/wrapper/: gradle-wrapper.properties
